--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/STD_DB?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=
+spring.jooq.sql-dialect=org.hibernate.dialect.MariaDBDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 
